# SlicerPyTorch

./: .gitignore  CMakeLists.txt  README.md  logo_gimp.xcf
PyTorchUtils/: CMakeLists.txt  PyTorchUtils.py
PyTorchUtils/Resources/UI/: PyTorchUtils.ui
